Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27017

Welcome page 6.3.0 examples are loaded and shown differently after visiting another kit and then switching back

XMLWordPrintable

    • d3a245574e (qt-creator/qt-creator/8.0) d3a245574e (qt-creator/qt-creator/master) d3a245574e (qt-creator/qt-creator/9.0) d3a245574e (qt-creator/qt-creator/qds-3.7)

      Welcome page 6.3.0 examples are loaded and shown differently after visiting another kit/example view and then switching back. Steps to reproduce:

      1. Open Qt creator -> 6.3.0 is selected by default on drop down menu. All 6.3.0 examples available are shown
      2. Switch to another kit/example view with the drop down menu. E.g. Android one -> Android specific examples are shown.
      3. Switch back to Qt 6.3.0 examples -> View doesn't show all the examples anymore. If previous kit/example view was android, the 6.3.0 view is loading/showing examples with "android" tag

      Happened with old+clean installations. Test setup:

      Ubuntu 20.04

      Qt Creator 6.0.2
      Based on Qt 6.2.2 (GCC 10.3.1 20210422 (Red Hat 10.3.1-1), 64 bit) Built on Jan 18 2022 09:55:00

      Qt6 6.3.0 beta1

        1. Screenshot1.png
          Screenshot1.png
          655 kB
        2. Screenshot2.png
          Screenshot2.png
          593 kB
        3. Screenshot3.png
          Screenshot3.png
          463 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            markku_nokkala Markku Nokkala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes